Fix uses of deprecated constructors for box types
Signed-off-by: Keith W. Campbell <keithc@ca.ibm.com>