@@ -1,6 +1,6 @@
 /*[INCLUDE-IF Sidecar18-SE]*/
 /*******************************************************************************
- * Copyright (c) 2004, 2017 IBM Corp. and others
+ * Copyright (c) 2004, 2018 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -172,7 +172,7 @@ public class FindCommand extends BaseJdmpviewCommand{
 				}
 			}
 			if (j >= patternLength){
-				matches.add(new Long(i));
+				matches.add(Long.valueOf(i));
 				if (matches.size() == findAtt.numMatchesToDisplay) 
 					return true;
 			}
