@@ -1,6 +1,6 @@
 /*[INCLUDE-IF Sidecar18-SE]*/
 /*******************************************************************************
- * Copyright (c) 2008, 2017 IBM Corp. and others
+ * Copyright (c) 2008, 2018 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -191,7 +191,7 @@ public class ClassicHeapDumpFormatter extends HeapDumpFormatter
 					return original.next();
 				} else {
 					_returnedExtra = true;
-					return new Long(extra);
+					return Long.valueOf(extra);
 				}
 			}
 
