@@ -555,7 +555,7 @@ final public class TraceFormat
 				 */
 				traceRecord.processTraceBufferHeader(traceFile, (long)dataStart + (long)j * (long)bufferSize, bufferSize);
 
-				Long threadID = new Long(traceRecord.getThreadIDAsLong());
+				Long threadID = Long.valueOf(traceRecord.getThreadIDAsLong());
 				if (listOfThreadBuffers.containsKey(threadID)) {
 					TraceThread buffersForThread = (TraceThread) listOfThreadBuffers
 							.get(threadID);
@@ -676,7 +676,7 @@ final public class TraceFormat
 			tracePointsFormatted++;
 
 			threadID = tp.getThreadID();
-			if (Util.findThreadID(new Long(threadID))) {
+			if (Util.findThreadID(Long.valueOf(threadID))) {
 				String formattedTime = tp.getFormattedTime();
 				tempTPString.append(formattedTime);
 
